# CronaDB

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FORMAT.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/workflows/: ci.yml  python-release.yml  release.yml
crates/chrona-cli/: Cargo.toml
crates/chrona-cli/src/: demo.rs  main.rs  style.rs  tui.rs
crates/chrona-core/: Cargo.toml
crates/chrona-core/benches/: ingest.rs  temporal.rs  traversal.rs
crates/chrona-core/src/: codec.rs  db.rs  error.rs  id.rs  lib.rs  props.rs  time.rs  verify.rs
crates/chrona-core/src/graph/: edge.rs  mod.rs  node.rs
crates/chrona-core/src/storage/: counters.rs  keys.rs  mod.rs  strings.rs  tables.rs
crates/chrona-core/src/temporal/: diff.rs  event.rs  mod.rs  traverse.rs
crates/chrona-core/tests/: db_integration.rs
crates/chrona-py/: Cargo.toml  README.md  pyproject.toml
crates/chrona-py/src/: lib.rs
crates/chrona-query/: Cargo.toml
crates/chrona-query/src/: ast.rs  exec.rs  filter.rs  format.rs  lexer.rs  lib.rs  parser.rs
crates/chrona-query/tests/: thesis_queries.rs
docs/: benchmarks.md  query-language.md
examples/agent_memory/: README.md  main.rs
examples/dependency_tracking/: README.md  main.rs
