[package]
name = "chrona-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core engine for Chrona: storage, graph model, temporal layer, event log"
readme = "../../README.md"
keywords = ["graph", "database", "temporal", "embedded"]
categories = ["database-implementations"]

[dependencies]
redb = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "traversal"
harness = false

[[bench]]
name = "temporal"
harness = false

[[bench]]
name = "ingest"
harness = false

[[example]]
name = "agent_memory"
path = "../../examples/agent_memory/main.rs"

[[example]]
name = "dependency_tracking"
path = "../../examples/dependency_tracking/main.rs"
